# docs/swagger.json
@@ -12,11 +12,6 @@
     "paths": {
         "/address/geocode": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -30,7 +25,7 @@
                 "operationId": "geocodeAddress",
                 "parameters": [
                     {
-                        "description": "Geocode Request",
+                        "description": "Geocode request",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -54,11 +49,6 @@
         },
         "/address/search": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -72,7 +62,7 @@
                 "operationId": "searchAddress",
                 "parameters": [
                     {
-                        "description": "Search Request",
+                        "description": "Search request",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -93,88 +83,9 @@
                     }
                 }
             }
-        },
-        "/login": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "SingIn"
-                ],
-                "summary": "Log in a user",
-                "operationId": "loginUser",
-                "parameters": [
-                    {
-                        "description": "User",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controlerAuth.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "JWT token"
-                    },
-                    "401": {
-                        "description": "Invalid credentials"
-                    }
-                }
-            }
-        },
-        "/register": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "SingUp"
-                ],
-                "summary": "Register a new user",
-                "operationId": "registerUser",
-                "parameters": [
-                    {
-                        "description": "User",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controlerAuth.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "User registered successfully"
-                    },
-                    "400": {
-                        "description": "Invalid request format"
-                    }
-                }
-            }
         }
     },
     "definitions": {
-        "controlerAuth.User": {
-            "type": "object",
-            "properties": {
-                "login": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "models.AddressGeo": {
             "description": "AddressGeo represents the geocode result for an address.",
             "type": "object",
@@ -255,13 +166,6 @@
                     "type": "string"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "ApiKeyAuth": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
         }
     }
 }
